--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
---------------darkcoinj
-HashEngineering <hashengineeringsolutions@gmail.com>
+--------------alarmxj
+Alarmxcore Team
 
 $ git log --format='%aN' | sort -u
 
